[package]
name = "b2sum-rs"
version = "0.1.0"
authors = ["AtropineTearz"]
edition = "2018"
description = "A Rust Library For Computing The Blake2b Hash of Files with any given Digest Size"
repository = "https://github.com/0xAtropine/b2sum-rust"
keywords = ["b2sum", "hashing","blake2b","file-hashing","checksum"]
categories = ["asynchronous","cryptography","filesystem","parsing"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "serde"
path = "examples/example_run.rs"

[dependencies]
filebuffer = "0.4.0"
blake2-rfc = "0.2.18"
hex = "0.4.2"
